# financebucket

./: README.md  db.sqlite3  pyproject.toml
myproject/: settings.py  urls.py
templates/: home.html
templates/users/: login.html  profile.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
