[project]
name = "financebucket"
version = "0.1.0"
description = ""
authors = [
    {name = "BartlomiejStaniak",email = "bartlomiejstaniak12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
